--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ html,  body {
 	font-family: Verdana, Ariel, sans-serif;
 	font-size: 15px;
 	color: #333;
-	box-shadow: 0 0 10px #333;
+	box-shadow: 0 0 8px rgba(0,0,0,0.7);
 	background-color: #fff;;
 }
 
@@ -53,7 +53,7 @@ h1 {
 	display: inline-block;
 	position: relative;
 	top: 10px;
-	left: 715px;
+	left: 710px;
 	color: #fff;
 	vertical-align: bottom;
 }
@@ -63,7 +63,7 @@ section#question {
 }
 
 h2 {
-	border: 2px solid #e3e2dd;
+	border: 1px solid #e3e2dd;
 	border-radius: 5px;
 	padding: 15px 5px;
 }
