--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 html,  body {
 	width: 100%;
 	height: 100%;
-	background-color: #e3e2dd;
+	background: linear-gradient(to bottom, #b3b3b0 0%, #e3e2dd 100%);
 }
 
 #wrapper {
