--- a/main.css
+++ b/main.css
@@ -68,8 +68,27 @@ h2 {
 	padding: 15px 5px;
 }
 
+
 #answer {
 	margin: 20px;
+}
+
+
+.actors {
+	display: inline-block;
+	margin: 5px;
+	border: 2px solid #fff;
+	border-radius: 5px;
+	padding: 3px;
+	width: 200px;
+	height: 300px;
+	background-size: 200px 300px;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.row {
+	display: inline-block;	
 }
 
 #photo1 {
@@ -86,20 +105,18 @@ h2 {
 
 #photo4 {
 	background-image: url(images/OrlandoBloom.jpg);
-	
 }
 
-.actors {
-	display: inline-block;
-	margin: 5px;
-	border: 2px solid #fff;
-	border-radius: 5px;
-	padding: 3px;
-	width: 200px;
-	height: 300px;
-	background-size: 200px 300px;
-	background-repeat: no-repeat;
-	background-position: center;
+@media screen and (max-width: 900px) {
+	.row {
+		display: block;	
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.actors {
+		display: block;	
+	}
 }
 
 .actors:hover {
