--- a/main.css
+++ b/main.css
@@ -4,6 +4,35 @@
 }
 */
 
+.intro {
+	display: block;
+}
+
+.game {
+	display: none;
+}
+
+.finish {
+	display: none;
+}
+
+h3 {
+	font-weight: bold;
+	padding-bottom: 10px;
+}
+
+p {
+	padding-bottom: 5px;	
+}
+
+.button-holder {
+	text-align: center;
+}
+
+button {
+	width: 100px;
+}
+
 html,  body {
 	width: 100%;
 	height: 100%;
@@ -50,7 +79,7 @@ h1 {
 }
 
 .score {
-	display: inline-block;
+	display: none;
 	position: relative;
 	top: 10px;
 	left: 50px;
@@ -63,7 +92,11 @@ section#question {
 	padding: 10px 25px;
 }
 
-h2 {
+.intro, .finish {
+	padding: 10px 25px;	
+}
+
+.greybox {
 	border: 1px solid #e3e2dd;
 	border-radius: 5px;
 	padding: 15px 5px;
@@ -97,6 +130,22 @@ footer {
 	border-radius: 10px;
 	padding: 10px;
 	margin: auto;
+}
+
+.box {
+	display: none;
+	position: fixed;
+	top: 30%;
+	margin: auto;
+	background: #fff;
+	box-shadow: 0 0 20px #000;
+	font-size: 2em;
+	position: fixed;
+	width:100px;
+	padding:10px;
+	margin: 5% auto;
+	left: 0;
+	right: 0;
 }
 
 @media (max-width: 935px) {
